tests/analysis/snapshots/r#mod__analysis__alpha034__import_all_symbols.snap
---
source: tests/analysis/alpha034.rs
expression: "foo_def.get(&usize::MAX)"
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 8,
        end: 11,
        is_public: true,
    },
)
