tests/analysis/snapshots/r#mod__analysis__alpha034__import_specific_symbols-2.snap
---
source: tests/analysis/alpha034.rs
expression: foo_refs
---
[
    SymbolLocation {
        file: FileId(
            1,
        ),
        start: 39,
        end: 42,
        is_public: false,
    },
]
