tests/analysis/snapshots/r#mod__analysis__alpha034__import_specific_symbols-3.snap
---
source: tests/analysis/alpha034.rs
expression: foo_def1.get(&42)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 8,
        end: 11,
        is_public: false,
    },
)
