tests/analysis/snapshots/r#mod__analysis__alpha034__public_definitions.snap
---
source: tests/analysis/alpha034.rs
expression: "foo_def.get(&usize::MAX)"
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 8,
        end: 11,
    },
)
