tests/analysis/snapshots/r#mod__analysis__alpha034__variable_definition-2.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&38)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 28,
        end: 29,
        is_public: false,
    },
)
