tests/analysis/snapshots/r#mod__analysis__alpha034__variable_scope-2.snap
---
source: tests/analysis/alpha034.rs
expression: "a_defs.get(&usize::MAX)"
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 9,
        end: 10,
        is_public: false,
    },
)
