tests/analysis/snapshots/r#mod__analysis__alpha034__variable_scope-4.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&87)
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 75,
        end: 76,
    },
)
